# evalmath

./: CMakeLists.txt  LICENSE.md  README.md  evalm.cpp  evalmath.cpp  evalmath.h  evalmath_tests.cpp  fuzz.pl
